2008-11-03 Jim Garlick <garlick@llnl.gov>

	* test/vpcd.c : Fix logic error.

2008-10-26 Jim Garlick <garlick@llnl.gov>

	* test/vpcd.c : Add -p port option and code to accept a connection
	on the specified socket.

	* test/t48 : Simple test using socket between powermand and vpcd.

	* src/powermand.c, src/client.[ch] : Added --one-client option for 
	testing.

2008-10-22 Jim Garlick <garlick@llnl.gov>

	* src/client.c : Additional changes for IPv6 support.

2008-10-21 Jim Garlick <garlick@llnl.gov>

	* src/client.c, src/powermand.c, src/daemon.c, src/powerman.c,
	src/device_tcp.c : Added preliminary IPv6 support.

2008-10-20 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.2.2

	* src/client.c :  Revert change to client.c pending debug (r1039:1049).

	* etc/Makefile.am : Add cyclades-pm42.dev to installed dev scripts.

2008-10-15 Jim Garlick <garlick@llnl.gov>

	* src/client.c : Use getaddrinfo() instead of gethostbyaddr()
	to prepare for ipv6 support.

2008-10-10 Jim Garlick <garlick@llnl.gov>

	* etc/cyclades-pm42.dev : New.

	* test/cyclades.c, test/t46* : Test for above.

2008-09-15 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.2.1

	* powerman.spec : Handle case when %chaos and %rhel are both defined.

2008-08-27 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.2

2008-08-21 Jim Garlick <garlick@llnl.gov>

	* test/baytech.c, test/t21*, test/t22* : Also test rpc3-de model.

2008-08-18 Jim Garlick <garlick@llnl.gov>

	* etc/ipmipower.c, test/t47 : Add ipmipower test [Al Chu].
	
	* etc/ipmipower.dev : Use \n to terminate commands instead of \r.

	* etc/hp3488.dev, etc/ics8064.dev, etc/powerman.dev,
	etc/ipmipower.dev : Define only 'ranged' version of scripts.

	* src/device.c : Use ranged version of scripts instead of singlet 
	versions if defined.  Allow only the ranged script to be defined.

	* src/device.c, src/powermand.c, src/powerman.c, test/t?? : Add 
	-Y,--short-circuit-delay option to expedite testing.
