@@ -95,6 +95,13 @@
 </tr>
 
 <tr>
+ <td width="40%">Cyclades PM20</td>
+ <td>20</td>
+ <td>pm20</td>
+ <td></td>
+</tr>
+
+<tr>
  <td width="40%">Cyclades PM42</td>
  <td>42</td>
  <td>pm42</td>
