@@ -1,9 +1,12 @@
 include "../etc/cyclades-pm8.dev"
 include "../etc/cyclades-pm10.dev"
+include "../etc/cyclades-pm20.dev"
 include "../etc/cyclades-pm42.dev"
 device "d0" "pm8" "./cyclades -p pm8|&"
 device "d1" "pm10" "./cyclades -p pm10|&"
 device "d2" "pm42" "./cyclades -p pm42|&"
+device "d3" "pm20" "./cyclades -p pm20|&"
 node "t[0-7]"  "d0"
 node "t[8-15]" "d1"
 node "t[16-57]" "d2"
+node "t[58-77]" "d3"
